# openai-oauth-api-service

./: .gitignore  AGENTS.md  README.md  progress.md
.agents/skills/: README.md
.agents/skills/openai-oauth-code-review-governance/: SKILL.md
.agents/skills/openai-oauth-docs-governance/: SKILL.md
.agents/skills/openai-oauth-domain-boundary-governance/: SKILL.md
.codex-review/: latest.md
config/: dev-ports.env
docs/: README.md  architecture.md  operations.md
docs/archive/: progress-2026-05-10-pre-docker-cleanup-constraint.md  progress-2026-06-25-before-skill-scenario-matrix.md
legacy-python-mvp/: .env.example  .gitignore  AGENTS.md  README.md  pyproject.toml
legacy-python-mvp/src/api_service/: app.py  auth.py  cli.py  config.py  db.py  proxy.py
legacy-python-mvp/tests/: test_api_service.py
scripts/: README.md  bootstrap.sh  dev-listener-stop.sh  dev-ports.mjs  dev-ports.test.mjs  init-project.sh
scripts/deploy/: production-preflight.sh
scripts/ops/: codex-runtime-health-check.py  codex-upstream-proxy-failover.py  install-codex-runtime-health-check.sh  install-codex-upstream-proxy-failover.sh
scripts/qa/: live-context-compaction.py  skill-health.mjs
server/: .env.example  Dockerfile  Makefile  README.md  go.mod  go.sum
server/deploy/: README.md
server/docs/: README.md  api.md  config.md  ent.md  observability.md  runtime.md
web/: .env.development  .env.production  .npmrc  .yarnrc.yml  README.md  index.html  package.json  vite.config.mjs
web/public/: index.html
web/scripts/: styleL1.mjs
web/src/: App.jsx  index.jsx  tailwind.css
(+229 files in other folders)
